Added everything from the talk yesterday

--- a/slides/index.html
+++ b/slides/index.html
@@ -6,7 +6,7 @@
 
 		<title>AngularJS - The Superheroic Framework</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="description" content="The superheroic framework">
 		<meta name="author" content="Martin Hilscher">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
