--- a/todo-application-without-pouchdb/index.html
+++ b/todo-application-without-pouchdb/index.html
@@ -28,9 +28,9 @@
 </form>
 
 <!-- Needed libraries -->
-<script src="angular-1.1.5/angular.min.js"></script>
+<script src="js/angular.min.js"></script>
 
 <!-- The actual code we wrote -->
-<script src="js/app/todoctrl.js"></script>
+<script src="js/todoctrl.js"></script>
 </body>
 </html>
