--- a/todo-application-without-pouchdb/index.html
+++ b/todo-application-without-pouchdb/index.html
@@ -12,11 +12,11 @@
 </h2>
 <ul class="unstyled">
     <li ng-repeat="todo in todos">
-        <input type="checkbox" ng-model="todo.done" ng-click="updateTodo(todo)"/>
-        <span class="done-{{todo.done}}">{{todo.text}}<a href="" ng-click="removeTodo(todo)"></a></span>
+        <input type="checkbox" ng-model="todo.done"/>
+        <span class="done-{{todo.done}}">{{todo.text}}</span>
     </li>
 </ul>
-<a href="" ng-click="clearDone()">Clear Done</a>
+<a href="" ng-click="removeDone()">Clear Done</a>
 
 <h2>New todos</h2>
 
